fixed overflow issue and other minor formatting issues on mobile

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -12,6 +12,9 @@
     justify-content: center;
 }
 
+button{
+    white-space: normal!important;
+}
 /*
 @media (min-width: 576px) {
     .card-columns {
